# langlearnbot

./: README.md  bun.lockb  index.html  package.json  tsconfig.json  tsconfig.node.json
backend/: README.md  bun.lockb  generateReadingTest.ts  generateWritingScore.ts  generateWritingTask.ts  index.ts  package.json
backend/prompts/: evaluateWriting.ts  reading.ts  writingTask.ts
frontend/: README.md  bun.lockb  index.html  package.json  tailwind.config.js
frontend/src/: main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: Question.tsx
frontend/src/functions/: fetchReadingTest.ts  fetchWritingEvaluation.ts  fetchWritingTask.ts
frontend/src/screens/: Home.tsx  Reading.tsx  Writing.tsx
src/: App.tsx  main.tsx
src-tauri/: tauri.conf.json
src/components/: LevelSelector.tsx  Question.tsx
src/functions/: generateReadingTest.ts
src/functions/prompts/: reading.ts
src/interfaces/: Answer.ts  Paragraph.ts  Question.ts  ReadingTest.ts
src/screens/: Home.tsx  Reading.tsx
types/: AnswerType.ts  ParagraphType.ts  QuestionType.ts  ReadingTestType.ts  WritingEvaluationType.ts  WritingTaskType.ts
